fea: Se actualiza versión de Java, versión de depencias y se corrigen bugs de consultas estadisticas.